need to implemnet view pager for roc speak

--- a/app/src/main/res/layout/activity_swipe.xml
+++ b/app/src/main/res/layout/activity_swipe.xml
@@ -59,7 +59,7 @@
             android:layout_gravity="center_vertical|start"
             android:layout_margin="@dimen/fab_margin"
             app:layout_anchor="@+id/swipe_view_container"
-            app:layout_anchorGravity="top|end"
+            app:layout_anchorGravity="bottom|end"
             app:srcCompat="@android:drawable/stat_notify_chat" />
 
 
